FullStackApp/FullStackAppK8Sdeployment/sql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-deployment
  labels:
    app: sql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql
# This applies to pod
  template:
    metadata:
      labels:
        app: sql
    spec:
      containers:
      - name: sql
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: sql-service
spec:
  selector:
    app: sql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
